<resources>
    <string name="app_name">Skripsi-App</string>
    <string name="peramalan">Peramalan</string>
    <string name="aplikasi">Aplikasi</string>
    <string name="pengunjung_wisatawan">Pengunjung Wisatawan</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="universitas_trunojoyo">Universitas Trunojoyo Madura</string>
    <string name="beranda">Beranda</string>
    <string name="akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_selamat_datang">Selamat Datang</string>
    <string name="bg_title">bg title</string>
    <string name="ic_hello">ic_hello</string>
    <string name="title">Aplikasi ini dibuat\nuntuk memenuhi\ntugas akhir</string>
    <string name="menu_data">Data Wisatawan</string>
    <string name="place_data">Data Tempat Wisata</string>
    <string name="data_tempat_wisata">Data Tempat Wisata</string>
    <string name="tambah_data">Tambah data</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="add_new_place">Tambah tempat wisata</string>
    <string name="simpan">Simpan</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="alert_tempat_wisata">Nama tempat wisata harus terisi</string>
    <string name="masukan_nama_tempat_wisata">Masukan nama tempat wisata</string>
    <string name="succsess">Berhasil</string>
    <string name="fail">Gagal</string>
    <string name="edit_place">Edit Tempat Wisata</string>
    <string name="change_place">Perubahan Tempat Wisata</string>
    <string name="cancel">Batal</string>
    <string name="delete_question">Apakah anda ingin menghapus?</string>
    <string name="delete_question_place">Apakah anda yakin ingin menghapus tempat wisata ini?</string>
    <string name="delete_question_tourist">Apakah anda yakin ingin menghapus data jumlah wisatawan ini?</string>
    <string name="delete_place">Hapus Tempat Wisata</string>
    <string name="delete_tourist">Hapus Data Jumlah wisatawan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="jumlah_wisatawan">Jumlah Wisatawan</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="_00_0000">00 / 0000</string>
    <string name="monthyear">Pilih Bulan Dan Tahun</string>
    <string name="masukan_jumlah_pengunjung_wisata">Masukan jumlah pengunjung wisata</string>
    <string name="monthyearmust">Bulan dan tahun harus terisi</string>
    <string name="touristmust">Jumlah pengunjung harus di isi</string>
    <string name="touristmonthyearmust">Bulan tahun dan jumlah pengunjung wisata harus di isi</string>
    <string name="data_tourist">Data Wisatawan</string>
    <string name="suc">Success</string>
    <string name="succacalculate">Berhasil di hitung</string>
    <string name="succadd">Berhasil di tambahkan</string>
    <string name="succput">Berhasil diperbarui</string>
    <string name="failput">Gagal di perbarui</string>
    <string name="faildel">Gagal dihapus</string>
    <string name="succdel">Berhasil dihapus</string>
    <string name="menu_calculate">Hitung Model Peramalan</string>
    <string name="menu_aditif">Dekomposisi Aditif</string>
    <string name="menu_multiplikatif">Dekomposisi Mulitplikatif</string>
    <string name="menu_ramal">Ramal Masa Depan</string>
    <string name="hitung_model_peramalan">Hitung Model Peramalan</string>
    <string name="notifcount0">Belum melakukan perhitungan model peramalan</string>
    <string name="modeldone">Telah melakukan perhitungan model peramalan</string>
    <string name="mulai_hitung_model_peramalan">Mulai Hitung Model Peramalan</string>
    <string name="ramalperiodemasadepan">Ramal Periode Masa Depan</string>
    <string name="masukan_jumlah_periode">Masukan jumlah periode bulan</string>
    <string name="mulai_ramal_periode_masa_depan">Mulai Ramal Periode Masa Depan</string>
    <string name="titlef_forecast_future">Ramal Periode Masa Depan</string>
    <string name="status_future">Bisa Melakukan Peramalan Periode Masa Depan</string>
    <string name="suc_future">Peramalan Periode Masa Depan Berhasil</string>
    <string name="fail_future">Belum Bisa Melakukan Peramalan Periode Masa Depan, Model Peramalan Belum Di Hitung</string>
    <string name="edtperiodmust">Periode Harus Di Isi</string>
    <string name="aditif">Aditif</string>
    <string name="grafik">Grafik</string>
    <string name="mulitplikatif">Mulitplikatif</string>
    <string name="fail_future_forecast">Gagal Melakukan Peramalan</string>
    <string name="anda_dapat">. Anda Dapat Meramalkan Periode Yang Akan Datang</string>
    <string-array name="data_title_menu">
        <item>@string/menu_data</item>
        <item>@string/place_data</item>
        <item>@string/menu_calculate</item>
        <item>@string/menu_ramal</item>
        <item>@string/menu_aditif</item>
        <item>@string/menu_multiplikatif</item>
    </string-array>

    <array name="data_ic_menu">
        <item>@drawable/ic_data_pengunjung</item>
        <item>@drawable/ic_tempat_wisata</item>
        <item>@drawable/ic_calculate</item>
        <item>@drawable/ic_ramal</item>
        <item>@drawable/ic_aditif</item>
        <item>@drawable/ic_multiplikatif</item>
    </array>
    <string name="menu_perhitungan">Perhitungan Manual</string>
    <string name="menu_peramalan">Peramalan Periode Selanjutnya</string>
    <string name="menu_evaluasi">Evaluasi Model Peramalan</string>
    <string name="menu_grafik">Grafik</string>
    <string name="sub_menu_perhitungan">Berisi mengenai perhitungan manual dari model peramalan</string>
    <string name="sub_menu_peramalan">Berisi mengenai hasil peramalan periode yang akan datang</string>
    <string name="sub_menu_evaluasi">Berisi mengenai hasil evaluasi perhitungan model peramalan</string>
    <string name="sub_menu_grafik">Berisi mengenai grafik hasil peramalan dan data asli</string>
    <string name="hasil_evaluasi_model_peramalan_aditif">Hasil Evaluasi Model Peramalan Aditif -</string>
    <string name="hasil_evaluasi_model_peramalan_multiplikatif">Hasil Evaluasi Model Peramalan Multiplikatif -</string>
    <string name="tracking_signal">Tracking Signal</string>
    <string name="mean_absolute_percentage_mape">Mean Absolute Percentage</string>

    <string name="mean_absolute_deviation">Mean Absolute Deviation</string>
    <string name="number">No.</string>
    <string name="t">t</string>
    <string name="ctdma">CTDMA</string>
    <string name="mape">MAPE</string>
    <string name="mad">MAD</string>
    <string name="error">Error</string>
    <string name="adjusted_forecast">Adjusted Forecast</string>
    <string name="unadjusted_forecast">Unadjusted Forecast</string>
    <string name="smoothed">Smoothed</string>
    <string name="seasonal">Seasonal</string>
    <string name="ratio">Ratio</string>
    <string name="perhitungan">Perhitungan Manual</string>
    <string name="hasil_perhitungan_dekomposisi_aditif">Hasil Perhitungan Dekomposisi Aditif -</string>
    <string name="hasil_perhitungan_dekomposisi_multiplikatif">Hasil Perhitungan Dekomposisi Multiplikatif -</string>
    <string name="nomor">No.</string>
    <string name="hasil_peramalan">Hasil Peramalan -</string>
    <string name="not_found_data_future">\"Data Peramalan Tidak Ada, Belum Melakukan Peramalan \"</string>
    <string name="key_localization">key_localization</string>
    <string name="ganti_bahasa">Ganti bahasa</string>
    <string name="info_app">info_app</string>
    <string name="languange_change">Bahasa yang tersedia hanya\ninggris dan indonesia</string>
    <string name="info">Info</string>
    <string name="languange">language</string>
    <string name="profile">profile</string>
    <string name="profile_akun">Profil Akun</string>
    <string name="profile_summary">Lihat profil akunmu</string>
    <string name="profil">Profil</string>
    <string name="info_summary">Berisi seputar aplikasi</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="Logout">Logout</string>
    <string name="key_info_app">key_info_app</string>
    <string name="key_logout">key_logout</string>
    <string name="keluar">Keluar</string>
    <string name="logout_summary">Ketuk disini untuk keluar dari aplikasi</string>
    <string name="admin">Admin</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="silakan_masuk_untuk_melanjutkan">Silakan masuk untuk melanjutkan</string>
    <string name="s1_sistem_informasi_universitas_trunojoyo_madura">S1 Sistem Informasi - Universitas Trunojoyo Madura</string>
    <string name="username_must">Username harus di isi</string>
    <string name="password_must">Password harus di isi</string>
    <string name="username_password_must">Username dan Password harus di isi</string>
    <string name="email">Email</string>
    <string name="email_must">Email harus di isi</string>
    <string name="email_password_must">Email dan Password harus di isi</string>
    <string name="wrong__password">Password salah</string>
    <string name="email_not_found">Email tidak ada</string>
    <string name="login">Login</string>
    <string name="fail_login">Masuk gagal</string>
    <string name="berhasil">Berhasil</string>
    <string-array name="data_title_menu_forecast">
        <item>@string/menu_perhitungan</item>
        <item>@string/menu_evaluasi</item>
        <item>@string/menu_grafik</item>
        <item>@string/menu_peramalan</item>
    </string-array>
    <string-array name="data_sub_title_menu_forecast">
        <item>@string/sub_menu_perhitungan</item>
        <item>@string/sub_menu_evaluasi</item>
        <item>@string/sub_menu_grafik</item>
        <item>@string/sub_menu_peramalan</item>
    </string-array>
    <array name="data_ic_forecast">
        <item>@drawable/ic_hitung_manual</item>
        <item>@drawable/ic_eval</item>
        <item>@drawable/ic_grafik</item>
        <item>@drawable/ic_ramal_masa</item>
    </array>



    <string-array name="data_title_settings">
        <item>@string/ganti_bahasa</item>
        <item>@string/tentang_aplikasi</item>
        <item>@string/keluar</item>
    </string-array>
    <string-array name="data_sub_title_settings">
        <item>@string/languange_change</item>
        <item>@string/info_summary</item>
        <item>@string/logout_summary</item>
    </string-array>
    <array name="data_ic_settings">
        <item>@drawable/ic_translate</item>
        <item>@drawable/ic_info_app</item>
        <item>@drawable/ic_logout</item>

    </array>
</resources>