<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="@dimen/size_16"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/number"/>

        <TextView
            android:id="@+id/t"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/t"/>


        <TextView
            android:id="@+id/at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_16"
            android:fontFamily="@font/poppins_medium"
            android:text="Jumlah Pengunjung (At)"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/ctdma"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/ctdma"/>
        <TextView
            android:id="@+id/ratio"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/ratio"/>
        <TextView
            android:id="@+id/seasonal"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/seasonal"/>
        <TextView
            android:id="@+id/smoothed"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/smoothed"/>
        <TextView
            android:id="@+id/unadjusted_forecast"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/unadjusted_forecast"/>
        <TextView
            android:id="@+id/adjusted_forecast"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/adjusted_forecast"/>
        <TextView
            android:id="@+id/error"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/error"/>
        <TextView
            android:id="@+id/mad"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/mad"/>
        <TextView
            android:id="@+id/mape"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/mape"/>
    </LinearLayout>
