<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/no"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginBottom="@dimen/size_8"
            android:gravity="center"
            android:layout_marginLeft="@dimen/size_18"
            android:background="@color/shimmer_color"
            android:textColor="@color/shimmer_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/nomor"
            />

        <TextView
            android:id="@+id/tvbulan"
            android:layout_marginLeft="@dimen/size_16"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_8"
            android:background="@color/shimmer_color"
            android:textColor="@color/shimmer_color"
            android:layout_marginBottom="@dimen/size_8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/bulan"
            />

        <TextView
            android:id="@+id/tvtahun"
            android:layout_marginLeft="@dimen/size_8"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/size_8"
            android:background="@color/shimmer_color"
            android:textColor="@color/shimmer_color"
            android:layout_marginBottom="@dimen/size_8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/tahun"
            />

        <TextView
            android:id="@+id/jumlah"
            android:layout_marginLeft="@dimen/size_18"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="@dimen/size_4"
            android:background="@color/shimmer_color"
            android:textColor="@color/shimmer_color"
            android:layout_marginTop="@dimen/size_8"
            android:layout_marginBottom="@dimen/size_8"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/jumlah_wisatawan"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"
        android:layout_marginLeft="@dimen/size_18"
        android:layout_marginRight="@dimen/size_18"
   />
</LinearLayout>